--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/allspice.gif" class="image fit thumb"><img src="images/allspice.gif" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
+								<h3> <a href="https://github.com/patrick-misner/allspice/"> All Spice</a></h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/07.gif" class="image fit thumb"><img src="images/fulls/07.gif" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
+								<a href="images/keeper.gif" class="image fit thumb"><img src="images/keeper.gif" alt="" /></a>
+								<h3>Keeper</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/07.gif" class="image fit thumb"><img src="images/fulls/07.gif" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
+								<a href="/images/bnbooking.gif" class="image fit thumb"><img src="/images/bnbooking.gif" alt="" /></a>
+								<h3>Booking App</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
