--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/07.gif" class="image fit thumb"><img src="images/fulls/07.gif" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/tower.gif" class="image fit thumb"><img src="images/tower.gif" alt="" /></a>
+								<h3>Tower</h3>
+								<p>This app you can create events.</p>
 							</article>
 
 						</div>
