--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="/images/favicon.webp" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 	</head>
 	<body class="is-preload">
 
@@ -45,27 +46,47 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/allspice.gif" class="image fit thumb"><img src="images/allspice.gif" alt="" /></a>
 								<h3> <a href="https://github.com/patrick-misner/allspice/"> All Spice</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>A recipe app where users can create recipes and add steps and ingredients. Steps can be reordered with a Vue draggable-next component. Users can search and filter recipes as well.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/keeper.gif" class="image fit thumb"><img src="images/keeper.gif" alt="" /></a>
-								<h3>Keeper</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3><a href="https://github.com/patrick-misner/keepr/">Keeper</a> </h3>
+								<p>An app where users can create posts with a photo called a "Keep" and create collections called a "Vault" that can store keeps created by any user.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="/images/bnbooking.gif" class="image fit thumb"><img src="/images/bnbooking.gif" alt="" /></a>
-								<h3>Booking App</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3> <a href="https://github.com/patrick-misner/bnbooking1/">BnBooking - Scheduling App</a> </h3>
+								<p>A scheduling app where users can register and create one or many provider pages and set their hours of operation. Users can book appointments with the providers and review Providers. </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/tower.gif" class="image fit thumb"><img src="images/tower.gif" alt="" /></a>
-								<h3>Tower</h3>
-								<p>This app you can create events.</p>
+								<h3> <a href="https://github.com/patrick-misner/wk7-chkpt-tower">Tower</a> </h3>
+								<p>This event app allows users to create, manage, and attend events. Users can view the events they are attending on their account and stay updated on an event's information.</p>
 							</article>
 
 						</div>
 
 					</section>
+
+
+		<section id="three">
+			<h2>Skills And Languages</h2>
+
+
+			<i class="devicon-html5-plain-wordmark colored"></i>
+			<i class="devicon-css3-plain-wordmark colored"></i>
+			<i class="devicon-javascript-plain colored"></i>
+			<i class="devicon-vuejs-plain-wordmark colored"></i>
+			<i class=" devicon-bootstrap-plain colored"></i>
+			<i class="devicon-csharp-plain colored"></i>
+
+			<i class="devicon-nodejs-plain colored"></i>
+			<i class="devicon-mongodb-plain-wordmark colored"></i>
+
+
+
+
+		</section>
 
 				<!-- Three -->
 					<section id="three">
