--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/keeper.gif" class="image fit thumb"><img src="images/keeper.gif" alt="" /></a>
 								<h3><a href="https://github.com/patrick-misner/keepr/">Keeper</a> </h3>
-								<p>An app where users can create posts with a photo called a "Keep" and create collections called a "Vault" that can store keeps created by any user.</p>
+								<p>A Pinterest style app where users can create posts with a photo called a "Keep" and create collections called a "Vault" that can store keeps created by any user.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="/images/bnbooking.gif" class="image fit thumb"><img src="/images/bnbooking.gif" alt="" /></a>
 								<h3> <a href="https://github.com/patrick-misner/bnbooking1/">BnBooking - Scheduling App</a> </h3>
-								<p>A scheduling app where users can register and create one or many provider pages and set their hours of operation. Users can book appointments with the providers and review Providers. </p>
+								<p>A scheduling app where users can register and create one or many provider pages and set their hours of operation. Users can book appointments with the providers and review the providers. </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/tower.gif" class="image fit thumb"><img src="images/tower.gif" alt="" /></a>
