--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/allspice.gif" class="image fit thumb"><img src="images/allspice.gif" alt="" /></a>
-								<h3> <a href="https://github.com/patrick-misner/allspice/"> All Spice</a></h3>
-								<p>A recipe app where users can create recipes and add steps and ingredients. Steps can be reordered with a Vue draggable-next component. Users can search and filter recipes as well.</p>
+								<h3> <a href="https://github.com/patrick-misner/allspice/"> All Spice - Recipe App</a></h3>
+								<p>A recipe full-stack app where users can create recipes and add steps and ingredients. Steps can be reordered with a Vue draggable-next component. Users can search and filter recipes as well.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/keeper.gif" class="image fit thumb"><img src="images/keeper.gif" alt="" /></a>
-								<h3><a href="https://github.com/patrick-misner/keepr/">Keeper</a> </h3>
-								<p>A Pinterest style app where users can create posts with a photo called a "Keep" and create collections called a "Vault" that can store keeps created by any user.</p>
+								<h3><a href="https://github.com/patrick-misner/keepr/">Keeper - Pinterest Style App</a> </h3>
+								<p>A Pinterest style full-stack app where users can create posts with a photo called a "Keep" and create collections called a "Vault" that can store keeps created by any user.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="/images/bnbooking.gif" class="image fit thumb"><img src="/images/bnbooking.gif" alt="" /></a>
 								<h3> <a href="https://github.com/patrick-misner/bnbooking1/">BnBooking - Scheduling App</a> </h3>
-								<p>A scheduling app where users can register and create one or many provider pages and set their hours of operation. Users can book appointments with the providers and review the providers. </p>
+								<p>A full-stack collobarative scheduling app where users can register and create one or many provider pages and set their hours of operation. Users can book appointments with the providers and review the providers. </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/tower.gif" class="image fit thumb"><img src="images/tower.gif" alt="" /></a>
-								<h3> <a href="https://github.com/patrick-misner/wk7-chkpt-tower">Tower</a> </h3>
-								<p>This event app allows users to create, manage, and attend events. Users can view the events they are attending on their account and stay updated on an event's information.</p>
+								<h3> <a href="https://github.com/patrick-misner/wk7-chkpt-tower">Tower - Event Tracking App</a> </h3>
+								<p>This full-stack event app allows users to create, manage, and attend events. Users can view the events they are attending on their account and stay updated on an event's information.</p>
 							</article>
 
 						</div>
