--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 		<title>Patrick Misner</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta property="og:title" content="Patrick Misner Portfolio" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://patrick-misner.github.io" />
+		<meta property="og:image" content="images/social.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="/images/favicon.webp" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
