--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
 			<header class="major">
 				<h2>About me</h2>
 			</header>
-			<p>Career changer, from IT to Software Development. I attribute my success in IT to working well with all types of
-				people and persistence. I do not give up on a problem and I'm not afraid to learn something new.
-				My passion for automation in the IT field, as well as collaborating with others in my academic and personal life
-				has led me to pursue a career in software development.
+			<p>Experienced in IT Support/Administration, my journey has been defined by my ability to collaborate effectively with diverse teams and my unwavering determination to solve complex challenges. I thrive on continuous learning and remain unafraid of acquiring new skills. My enduring passion for automation within the IT field, coupled with a track record of successful collaborations in both academic and personal spheres, has naturally led me towards a career path encompassing software development and IT Support/Administration.
 			</p>
 
 		</section>
