--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="/images/avatar.jpeg" alt="" /></a>
 			<h1><strong>Patrick Misner</strong><br />
-				Software Developer<br />
+				IT Support/Administration and Software Development<br />
 			</h1>
 		</div>
 	</header>
