--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 			<h2>Recent Work</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/pdemo.gif" class="image fit thumb"><img src="images/pdemo.gif" alt="" /></a>
+					<h3> <a href="https://github.com/patrick-misner/tenacious-legal">Tower - Event Tracking App</a> </h3>
+					<p>Tenacious Legal, a respected client based in the Magic Valley area, approached me for a website upgrade. They aimed to have a modern website that works well on mobile devices and includes helpful sections like FAQs and an easy-to-use contact page. By using their current website as a starting point, I tailored and polished it to match their needs. Website updates are facilitated by a GitHub action, uploading files and invalidating global cache for their Amazon Web Services (AWS) S3 Bucket.</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/allspice.gif" class="image fit thumb"><img src="images/allspice.gif" alt="" /></a>
 					<h3> <a href="https://github.com/patrick-misner/allspice/"> All Spice - Recipe App</a></h3>
 					<p>A recipe full-stack app where users can create recipes and add steps and ingredients. Steps can be
@@ -67,12 +72,7 @@
 						and set their hours of operation. Users can book appointments with the providers and review the providers.
 					</p>
 				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/tower.gif" class="image fit thumb"><img src="images/tower.gif" alt="" /></a>
-					<h3> <a href="https://github.com/patrick-misner/wk7-chkpt-tower">Tower - Event Tracking App</a> </h3>
-					<p>This full-stack event app allows users to create, manage, and attend events. Users can view the events they
-						are attending on their account and stay updated on an event's information.</p>
-				</article>
+
 
 			</div>
 
