--- a/index.html
+++ b/index.html
@@ -83,15 +83,17 @@
 			<h2>Skills And Languages</h2>
 
 
+			<i class="devicon-react-original-wordmark colored"></i>
+			<i class="devicon-amazonwebservices-original"></i>
 			<i class="devicon-html5-plain-wordmark colored"></i>
 			<i class="devicon-css3-plain-wordmark colored"></i>
 			<i class="devicon-javascript-plain colored"></i>
+			<i class="devicon-tailwindcss-original-wordmark colored"></i>
 			<i class="devicon-vuejs-plain-wordmark colored"></i>
-			<i class=" devicon-bootstrap-plain colored"></i>
 			<i class="devicon-csharp-plain colored"></i>
-
 			<i class="devicon-nodejs-plain colored"></i>
 			<i class="devicon-mongodb-plain-wordmark colored"></i>
+			<i class="devicon-mysql-plain-wordmark colored"></i>
 
 
 
