--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/pdemo.gif" class="image fit thumb"><img src="images/pdemo.gif" alt="" /></a>
-					<h3> <a href="https://github.com/patrick-misner/tenacious-legal">Tower - Event Tracking App</a> </h3>
+					<h3> <a href="https://github.com/patrick-misner/tenacious-legal">Tenacious Legal - Production React App</a> </h3>
 					<p>Tenacious Legal, a respected client based in the Magic Valley area, approached me for a website upgrade. They aimed to have a modern website that works well on mobile devices and includes helpful sections like FAQs and an easy-to-use contact page. By using their current website as a starting point, I tailored and polished it to match their needs. Website updates are facilitated by a GitHub action, uploading files and invalidating global cache for their Amazon Web Services (AWS) S3 Bucket.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
