--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<header class="major">
 				<h2>About me</h2>
 			</header>
-			<p>Experienced in IT Support/Administration, my journey has been defined by my ability to collaborate effectively with diverse teams and my unwavering determination to solve complex challenges. I thrive on continuous learning and remain unafraid of acquiring new skills. My enduring passion for automation within the IT field, coupled with a track record of successful collaborations in both academic and personal spheres, has naturally led me towards a career path encompassing software development and IT Support/Administration.
+			<p>Experienced in IT Support/Administration, my journey has been defined by my ability to collaborate effectively with diverse teams and my determination to solve complex challenges. My passion for the IT field, coupled with a track record of successful collaborations in both academic and personal spheres, has naturally led me towards a career path encompassing IT Support and Administration.
 			</p>
 
 		</section>
@@ -51,29 +51,8 @@
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/pdemo.gif" class="image fit thumb"><img src="images/pdemo.gif" alt="" /></a>
 					<h3> <a href="https://github.com/patrick-misner/tenacious-legal">Tenacious Legal - Production AWS React App</a> </h3>
-					<p>Tenacious Legal, a respected client based in the Magic Valley area, approached me for a website upgrade. They aimed to have a modern website that works well on mobile devices and includes helpful sections like FAQs and an easy-to-use contact page. By using their current website as a starting point, I tailored and polished it to match their needs. Website updates are facilitated by a GitHub action, uploading files and invalidating global cache for their Amazon Web Services (AWS) S3 Bucket.</p>
+					<p>Tenacious Legal, a respected client based in the Magic Valley area, approached me for a website upgrade. They aimed to have a modern website that works well on mobile devices and includes helpful sections like FAQs and an easy-to-use pricing calculator and contact page. By using their current website as a starting point, I tailored and polished it to match their needs. Website updates are facilitated by a GitHub action, uploading files and invalidating global cache for their Amazon Web Services (AWS) S3 Bucket.</p>
 				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/allspice.gif" class="image fit thumb"><img src="images/allspice.gif" alt="" /></a>
-					<h3> <a href="https://github.com/patrick-misner/allspice/"> All Spice - Recipe App</a></h3>
-					<p>A recipe full-stack app where users can create recipes and add steps and ingredients. Steps can be
-						reordered with a Vue draggable-next component. Users can search and filter recipes as well.</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/keeper.gif" class="image fit thumb"><img src="images/keeper.gif" alt="" /></a>
-					<h3><a href="https://github.com/patrick-misner/keepr/">Keeper - Pinterest Style App</a> </h3>
-					<p>A Pinterest style full-stack app where users can create posts with a photo called a "Keep" and create
-						collections called a "Vault" that can store keeps created by any user.</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="/images/bnbooking.gif" class="image fit thumb"><img src="/images/bnbooking.gif" alt="" /></a>
-					<h3> <a href="https://github.com/patrick-misner/bnbooking1/">BnBooking - Scheduling App</a> </h3>
-					<p>A full-stack collobarative scheduling app where users can register and create one or many provider pages
-						and set their hours of operation. Users can book appointments with the providers and review the providers.
-					</p>
-				</article>
-
-
 			</div>
 
 		</section>
