--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<header class="major">
 				<h2>About me</h2>
 			</header>
-			<p>Experienced in IT Support/Administration, my journey has been defined by my ability to collaborate effectively with diverse teams and my determination to solve complex challenges. My passion for the IT field, coupled with a track record of successful collaborations in both academic and personal spheres, has naturally led me towards a career path in technology.
+			<p>Experienced in IT Support and Administration, my journey has been defined by my ability to collaborate effectively with diverse teams and my determination to solve complex challenges. My passion for the IT field, coupled with a track record of successful collaborations in both academic and personal spheres, has naturally led me towards a career path in technology.
 			</p>
 
 		</section>
